updated FAQ section: changed colors for questions, answers, title and subtitle; changed size and alignment  for the title (now centered and same size as in figma); upated tailwind with new colors.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -195,10 +195,15 @@ ol {
     font-family: futura-pt;
     color: #06263d
 }
+
 h1 span {
     position:absolute; top: -76px;
 }
 
+.section h1 {
+    font-size: 50px;
+    color: #FFFFFF;
+}
 .carousel-item {
     color: #FFFFFF
 }
