--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -271,18 +271,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 0.375em;
+    margin-bottom: 0.750em;
     padding-bottom: 0;
+    background-color: #D9F2F6;
+    border-radius: 5px;
   }
 
   .faq-question {
-    @apply bg-sand py-1 px-3;
+    @apply bg-lightblue py-1 px-3;
     font-family: proxima-nova, sans-serif;
     font-size: 1em;
+    color: #5561D3;
+    background-color: #D9F2F6;
   }
 
   .faq-answer {
     @apply px-5 pb-0.5;
+    @apply [&>p]:text-neonpink;
+  }
+
+  .faq-title {
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .faq-subtitle {
+    @apply [&>p]:text-lightblue;
   }
 
   .sponsor-logo-container {
