--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,7 +153,6 @@
   .landing-countdown {
     @apply flex flex-row sm:space-x-3 space-x-2 z-[1];
     margin-top: -27vw;
-    margin-bottom: 10vw;
     width: 48%;
     justify-content: space-between;
   }
@@ -161,7 +160,7 @@
   .landing-countdown-square {
     @apply w-[25vw] h-[22vw] sm:w-[14.7vw] sm:h-[14vw];
     @apply md:w-[9.975vw] md:h-[9.5vw] md:min-w-[5.25rem] md:min-h-[5rem];
-    @apply lg:max-h-[8vw] lg:max-w-[8vw] lg:mb-[28vw];
+    @apply lg:max-h-[8vw] lg:max-w-[8vw] lg:mb-[19vw];
     @apply flex flex-col items-center justify-center;
   }
 
@@ -231,8 +230,8 @@
   }
 
   nav {
-    @apply text-green bg-white px-9 w-full h-20 flex flex-row justify-between items-center top-0 sticky z-10;
-    font-family: proxima-nova, sans-serif;
+    @apply text-green bg-periwinkle px-9 w-full h-20 flex flex-row justify-between items-center top-0 sticky z-10;
+    font-family: Terminal Grotesque Open, sans-serif;
   }
   
   nav a {
@@ -257,7 +256,11 @@
   }
 
   .links {
-    @apply flex flex-row space-x-5 md:space-x-11;
+    @apply flex flex-row space-x-5 md:space-x-3;
+  }
+
+  .links button {
+    @apply mt-1 bg-brightyellow text-xl text-periwinkle px-6 py-3 rounded-full hover:bg-brightblue font-bold;
   }
 
   .mobile-nav {
