--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -202,7 +202,6 @@ h1 span {
 
 .section h1 {
     font-size: 50px;
-    color: #FFFFFF;
 }
 .carousel-item {
     color: #FFFFFF
@@ -525,7 +524,7 @@ h1 span {
 }
 
 .background {
-    background-color: #06263d;
+    background-color: #050857;
 }
 
 .button {
@@ -564,7 +563,7 @@ h1 span {
 #logistics_content {
     padding-top: 100px;
     padding-bottom: 250px;
-    background-image: url('/img/logistics_notext.png');
+    navbackground-image: url('/img/logistics_notext.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -572,7 +571,8 @@ h1 span {
 #faqs_content {
     padding-top: 100px;
     padding-bottom: 100px;
-    background-image: url('/img/faqs_notext.png');
+    background-image: url('/img/faq_bg.png');
+    background-color: #010029;
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
