--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@
 
   h1 {
     @apply font-bold text-3xl text-green mb-5;
-    font-family: Terminal Grotesque Open, sans-serif;
+    font-family: Terminal Grotesque, sans-serif;
   }
 
 
