--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,62 +136,36 @@
   }
 
   .image-row{
-    @apply mb-20 mt-20;
-    position: relative;
+    @apply relative mb-20 mt-20;
   }
 
   .apply-content{
-    top: 25%;
-    left: 50%;
-    position: absolute;
+    @apply top-[25%] left-[50%] absolute w-[15%];
     z-index: 1;
-    width: 15%;
   }
 
   #apply-bg{
-    position: relative;
-    width: 100%;
+    @apply relative w-[100%];
   }
 
   .heading h1{
-    @apply px-[20%] text-black md:px-[20%] lg:px-[10%];
-    color: #451DB9;
-    font-size: 350%;
-    line-height: 80%;
-    margin-top: 2%;
+    @apply px-[20%] md:px-[20%] lg:px-[10%] text-[#451DB9] text-[350%] leading-[80%] mt-[2%];
   }
 
   .heading h2{
-    @apply px-[5%] ;
-    color: #00639A;
-    font-size: 200%;
-    line-height: 160%;
+    @apply px-[5%] text-[#00639A] text-[200%] leading-[160%];
   }
 
   .header-box {
-    border-width: 15px;
-    background-color: #BEA8FF;
-    border-color: #9773FF;
-    width: 100%;
+    @apply border-[15px] bg-[#BEA8FF] border-[#9773FF] w-[100%];
   }
 
   .desc-box{
-    position: relative;
-    border-width: 15px;
-    background-color: #C1ECFF;
-    height: auto;
-    width: 100%;
-    border-color: #00B7FF;
-  }
-
-  .dots{
-    display: flex;
-    justify-content: space-between;
+    @apply relative border-[15px] bg-[#C1ECFF] h-auto w-[100%] border-[#00B7FF];
   }
 
   .row{
-    display: flex;
-    justify-content: center;
+    @apply flex justify-center;
   }
 
   .box{
@@ -201,78 +175,12 @@
     border-color: #6D79FF;
   }
 
-  .blue-top-left{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    left: 10px;
-    top: 10px;
-    background-color: #00B7FF;
-    border-radius: 50%;
-  }
-  .blue-top-right{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    right: 10px;
-    top: 10px;
-    background-color: #00B7FF;
-    border-radius: 50%;
-  }
-  .blue-bottom-left{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    left: 10px;
-    bottom: 10px;
-    background-color: #00B7FF;
-    border-radius: 50%;
-  }
-  .blue-bottom-right{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    right: 10px;
-    bottom: 10px;
-    background-color: #00B7FF;
-    border-radius: 50%;
+  .dots{
+    @apply flex justify-between;
   }
 
-  .purple-top-left{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    left: 10px;
-    top: 10px;
-    background-color: #9773FF;
-    border-radius: 50%;
-  }
-  .purple-top-right{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    right: 10px;
-    top: 10px;
-    background-color: #9773FF;
-    border-radius: 50%;
-  }
-  .purple-bottom-left{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    left: 10px;
-    bottom: 10px;
-    background-color: #9773FF;
-    border-radius: 50%;
-  }
-  .purple-bottom-right{
-    position: relative;
-    height: 19px;
-    width: 19px;
-    right: 10px;
-    bottom: 10px;
-    background-color: #9773FF;
-    border-radius: 50%;
+  .dot{
+    @apply h-[19px] w-[19px] m-[10px] rounded-full;
   }
 
   .heading button {
@@ -363,42 +271,28 @@
   }
 
   .about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center
+    @apply px-[10%] md:px-[15%] lg:px-[25%] pt-12;
+  }
+
+  .about-section img{
+    @apply mx-auto w-[50%];
   }
 
   .about-paragraph h2{
-    font-size: 50px;
-    line-height: 80px;
-    color: #FFD3C9;
+    @apply text-5xl text-center m-auto text-[#FFD3C9];
   }
 
   .about-paragraph p{
-    font-size: 120%;
-    line-height: 40px;
-    @apply text-justify;
-    color: #FFD3C9;
+    @apply text-lg leading-8 text-[#FFD3C9];
   }
 
   .about-paragraph{
-    @apply text-justify mt-10 mb-10;
+    @apply text-left mt-10 mb-10 px-8 py-6 h-auto rounded-[1rem];
     background-color: #31398C;
-    padding: 30px;
-    border-radius: 40px;
-
-    height: auto;
-    width: 55%;
   }
 
   .about-header{
-    @apply text-center;
-    background-color: #5562E9;
-    border-radius: 20px;
-    color: #FFD3C9;
-    width: 100%;
-    left: 25%;
-    margin-bottom: 10px;
+    @apply rounded-[1rem] py-6 px-2 w-[100%] mb-5 bg-[#5562E9] text-[#FFD3C9] left-[25%];
   }
 
   nav {
