changed assets of dots & pacman for the about section (added 2 more dots for each row) and sized down title for FAQs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -308,7 +308,7 @@
 
 
   #about-title{
-    @apply mx-auto w-[30%];
+    @apply mx-auto w-[30%] mr-5;
   }
 
   .about-paragraph h2{
@@ -465,7 +465,7 @@
   }
 
   #faq-title {
-    @apply mx-5 w-[15%];
+    @apply mx-5 w-[12.5%];
   }
 
   .faq-content{
