fixed clouds + coin hover

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -157,11 +157,11 @@
     transition: all 0.5s ease;
     z-index: 1;
   }
-
+  /*
   .image-row:hover .apply-content {
     @apply top-[19%] left-[48%] absolute w-[23%];
   }
-
+  
   .image-row:hover .apply-content .animated-button {
     content: url("../images/apply_button_hovered.svg");
   }
@@ -169,7 +169,31 @@
   .image-row:hover .animated-coin{
     content: url("../images/apply_bg_hovered.svg");
   }
+  */
 
+  .apply-content:hover {
+    @apply top-[19%] left-[48%] absolute w-[23%];
+  }
+
+  .apply-content:hover .animated-button {
+    content: url("../images//apply_button_hovered.svg");
+  }
+
+  .image-row:hover .animated-coin{
+    content: url("../images/apply_bg_hovered.svg");
+  }
+
+  div.image-row {
+    pointer-events: none;
+  }
+  div.apply-content {
+    pointer-events: auto;
+  }
+  
+  /*
+    I stole the above code from stackoverflow and I don't know how it works, but it fixes the issue of the transition happening when
+    you hover over the image-row div.
+  */
 
   #apply-bg{
     @apply relative w-[100%];
@@ -228,7 +252,7 @@
   }
 
   .landing-background {
-    @apply flex md:w-[100%] lg:h-[100%] w-[0%];
+    @apply flex md:w-[100%] lg:h-[100%] w-[0%] z-10;
   }
 
   .landing-logo {
@@ -307,6 +331,10 @@
     @apply bg-brightblue bg-opacity-10 w-[11.5vw] h-[11vw] min-w-[7rem] min-h-[7rem] rounded-lg;
     @apply font-semibold text-navy tracking-wide;
     font-family: proxima-nova, sans-serif;
+  }
+
+  .clouds-container{
+    @apply w-[0] md:w-[100vw] overflow-hidden absolute top-0 h-[70vw];
   }
 
   .logistics-icon-square-container {
